# customer-feedback-processing-agent

./: .env.template  .gitignore  README.md  pyproject.toml  requirements.txt
src/experiments/: agent_parallel_tool_call.ipynb  custom_parallel.ipynb  guardrail.ipynb
src/lambda_functions/guardrail/: lambda_function.py  prompts.py  schemas.py  tools.py  utils.py
src/lambda_functions/send_response/: lambda_function.py  utils.py
src/lambda_functions/task_executor/: lambda_function.py  prompts.py  schemas.py  tools.py  utils.py
